--- a/empathy/empathy.html
+++ b/empathy/empathy.html
@@ -14,7 +14,7 @@
 <meta name="author" content="Chi-Lin Yu">
 <meta name="author" content="Lisa Fedina">
 <meta name="author" content="Todd Herrenkohl">
-<meta name="dcterms.date" content="2026-01-21">
+<meta name="dcterms.date" content="2026-01-22">
 
 <title>When Empathy Helps and Hurts</title>
 <style>
@@ -87,11 +87,11 @@ div.csl-indent {
       <!-- user-provided yaml closeread style options -->
       <style>
         :root {
-          --cr-narrative-text-color-sidebar: black;
---cr-narrative-background-color-sidebar: white;
---cr-narrative-text-color-overlay: black;
---cr-narrative-background-color-overlay: lightgrey;
+          --cr-narrative-background-color-sidebar: white;
 --cr-section-background-color: white;
+--cr-narrative-background-color-overlay: lightgrey;
+--cr-narrative-text-color-sidebar: black;
+--cr-narrative-text-color-overlay: black;
         }
       </style>
     
@@ -123,7 +123,7 @@ div.csl-indent {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">January 21, 2026</p>
+      <p class="date">January 22, 2026</p>
     </div>
   </div>
   
@@ -171,17 +171,17 @@ div.csl-indent {
 <p>A significant nonlinear association was observed between empathy and self-harm thoughts.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-pan-to="-15%,-25%" data-scale-by="1.5" data-focus-on="cr-empathy">
+<div class="trigger new-trigger" data-focus-on="cr-empathy" data-scale-by="1.5" data-pan-to="-15%,-25%">
 <div class="narrative">
 <p>Predicted probabilities of self-harm thoughts were lowest at moderate levels of empathy for both groups.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-pan-to="-45%,-5%" data-scale-by="1.5" data-focus-on="cr-empathy">
+<div class="trigger new-trigger" data-focus-on="cr-empathy" data-scale-by="1.5" data-pan-to="-45%,-5%">
 <div class="narrative">
 <p>Risk for self-harm thoughts was highest among individuals with high empathy.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-pan-to="15%,-5%" data-scale-by="2.0" data-focus-on="cr-empathy">
+<div class="trigger new-trigger" data-focus-on="cr-empathy" data-scale-by="2.0" data-pan-to="15%,-5%">
 <div class="narrative">
 <p>Risk for self-harm thoughts was also somewhat high for individuals with low empathy.</p>
 </div>
