change author block

--- a/empathy/empathy.html
+++ b/empathy/empathy.html
@@ -6,15 +6,8 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="author" content="Sunghyun Hong">
 <meta name="author" content="Andy Grogan-Kaylor">
-<meta name="author" content="Moohyun Kim">
-<meta name="author" content="Anna Bender">
-<meta name="author" content="Shaddy Saba">
-<meta name="author" content="Chi-Lin Yu">
-<meta name="author" content="Lisa Fedina">
-<meta name="author" content="Todd Herrenkohl">
-<meta name="dcterms.date" content="2026-01-22">
+<meta name="dcterms.date" content="2026-01-23">
 
 <title>When Empathy Helps and Hurts</title>
 <style>
@@ -87,11 +80,11 @@ div.csl-indent {
       <!-- user-provided yaml closeread style options -->
       <style>
         :root {
-          --cr-narrative-background-color-sidebar: white;
---cr-section-background-color: white;
+          --cr-narrative-text-color-overlay: black;
 --cr-narrative-background-color-overlay: lightgrey;
+--cr-narrative-background-color-sidebar: white;
 --cr-narrative-text-color-sidebar: black;
---cr-narrative-text-color-overlay: black;
+--cr-section-background-color: white;
         }
       </style>
     
@@ -107,23 +100,16 @@ div.csl-indent {
 <div class="quarto-title-meta column-page">
 
     <div>
-    <div class="quarto-title-meta-heading">Authors</div>
+    <div class="quarto-title-meta-heading">Author</div>
     <div class="quarto-title-meta-contents">
-             <p>Sunghyun Hong </p>
-             <p>Andy Grogan-Kaylor </p>
-             <p>Moohyun Kim </p>
-             <p>Anna Bender </p>
-             <p>Shaddy Saba </p>
-             <p>Chi-Lin Yu </p>
-             <p>Lisa Fedina </p>
-             <p>Todd Herrenkohl </p>
+             <p><a href="https://agrogan1.github.io/">Andy Grogan-Kaylor</a> </p>
           </div>
   </div>
     
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">January 22, 2026</p>
+      <p class="date">January 23, 2026</p>
     </div>
   </div>
   
@@ -171,17 +157,17 @@ div.csl-indent {
 <p>A significant nonlinear association was observed between empathy and self-harm thoughts.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-empathy" data-scale-by="1.5" data-pan-to="-15%,-25%">
+<div class="trigger new-trigger" data-pan-to="-15%,-25%" data-scale-by="1.5" data-focus-on="cr-empathy">
 <div class="narrative">
 <p>Predicted probabilities of self-harm thoughts were lowest at moderate levels of empathy for both groups.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-empathy" data-scale-by="1.5" data-pan-to="-45%,-5%">
+<div class="trigger new-trigger" data-pan-to="-45%,-5%" data-scale-by="1.5" data-focus-on="cr-empathy">
 <div class="narrative">
 <p>Risk for self-harm thoughts was highest among individuals with high empathy.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-empathy" data-scale-by="2.0" data-pan-to="15%,-5%">
+<div class="trigger new-trigger" data-pan-to="15%,-5%" data-scale-by="2.0" data-focus-on="cr-empathy">
 <div class="narrative">
 <p>Risk for self-harm thoughts was also somewhat high for individuals with low empathy.</p>
 </div>
