re-render w/ updated bibliography

--- a/empathy/empathy.html
+++ b/empathy/empathy.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Andy Grogan-Kaylor">
-<meta name="dcterms.date" content="2026-01-23">
+<meta name="dcterms.date" content="2026-01-24">
 
 <title>When Empathy Helps and Hurts</title>
 <style>
@@ -80,11 +80,11 @@ div.csl-indent {
       <!-- user-provided yaml closeread style options -->
       <style>
         :root {
-          --cr-narrative-text-color-overlay: black;
+          --cr-narrative-background-color-sidebar: white;
 --cr-narrative-background-color-overlay: lightgrey;
---cr-narrative-background-color-sidebar: white;
---cr-narrative-text-color-sidebar: black;
 --cr-section-background-color: white;
+--cr-narrative-text-color-overlay: black;
+--cr-narrative-text-color-sidebar: black;
         }
       </style>
     
@@ -109,7 +109,7 @@ div.csl-indent {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">January 23, 2026</p>
+      <p class="date">January 24, 2026</p>
     </div>
   </div>
   
@@ -132,7 +132,7 @@ div.csl-indent {
 <section id="objective" class="level1 narrative">
 <h1>Objective</h1>
 <p>Child maltreatment is a well-established risk factor for self-harm, yet the affective processes underlying this association remain unclear.</p>
-<p>This study <span class="citation" data-cites="empathy">(<a href="#ref-empathy" role="doc-biblioref">Hong et al., n.d.</a>)</span> examines how empathy relates to the association between early childhood maltreatment and lifetime self-harm thoughts.</p>
+<p>This study <span class="citation" data-cites="empathy">(<a href="#ref-empathy" role="doc-biblioref">Hong et al., 2026</a>)</span> examines how empathy relates to the association between early childhood maltreatment and lifetime self-harm thoughts.</p>
 </section>
 </div>
 <div class="trigger new-trigger" data-focus-on="cr-method">
@@ -313,7 +313,7 @@ div.csl-indent {
 
 <div id="quarto-appendix" class="default"><section class="quarto-appendix-contents" role="doc-bibliography" id="quarto-bibliography"><h2 class="anchored quarto-appendix-heading">References</h2><div id="refs" class="references csl-bib-body hanging-indent" data-entry-spacing="0" data-line-spacing="2" role="list">
 <div id="ref-empathy" class="csl-entry" role="listitem">
-Hong, S., Grogan-Kaylor, A., Kim, M., Bender, A., Saba, S., Yu, C.-L., Fedina, L., &amp; Herrenkohl, T. (n.d.). When empathy helps and hurts: Non-linear associations between early childhood maltreatment history, empathy and self-harm thoughts. <em>Child Maltreatment</em>.
+Hong, S., Grogan-Kaylor, A., Kim, M., Bender, A., Saba, S., Yu, C.-L., Fedina, L., &amp; Herrenkohl, T. (2026). When empathy helps and hurts: Non-linear associations between early childhood maltreatment history, empathy and self-harm thoughts. <em>Child Maltreatment</em>.
 </div>
 </div></section></div></main>
 <!-- /main column -->
