--- a/empathy/empathy.html
+++ b/empathy/empathy.html
@@ -80,11 +80,11 @@ div.csl-indent {
       <!-- user-provided yaml closeread style options -->
       <style>
         :root {
-          --cr-narrative-background-color-sidebar: white;
---cr-narrative-background-color-overlay: lightgrey;
---cr-section-background-color: white;
+          --cr-section-background-color: white;
 --cr-narrative-text-color-overlay: black;
+--cr-narrative-background-color-overlay: lightgrey;
 --cr-narrative-text-color-sidebar: black;
+--cr-narrative-background-color-sidebar: white;
         }
       </style>
     
@@ -157,17 +157,17 @@ div.csl-indent {
 <p>A significant nonlinear association was observed between empathy and self-harm thoughts.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-pan-to="-15%,-25%" data-scale-by="1.5" data-focus-on="cr-empathy">
+<div class="trigger new-trigger" data-pan-to="-15%,-25%" data-focus-on="cr-empathy" data-scale-by="1.5">
 <div class="narrative">
 <p>Predicted probabilities of self-harm thoughts were lowest at moderate levels of empathy for both groups.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-pan-to="-45%,-5%" data-scale-by="1.5" data-focus-on="cr-empathy">
+<div class="trigger new-trigger" data-pan-to="-45%,-5%" data-focus-on="cr-empathy" data-scale-by="1.5">
 <div class="narrative">
 <p>Risk for self-harm thoughts was highest among individuals with high empathy.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-pan-to="15%,-5%" data-scale-by="2.0" data-focus-on="cr-empathy">
+<div class="trigger new-trigger" data-pan-to="15%,-5%" data-focus-on="cr-empathy" data-scale-by="2.0">
 <div class="narrative">
 <p>Risk for self-harm thoughts was also somewhat high for individuals with low empathy.</p>
 </div>
