article in journal online!!!; updated citation

--- a/empathy/empathy.html
+++ b/empathy/empathy.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Andy Grogan-Kaylor">
-<meta name="dcterms.date" content="2026-01-24">
+<meta name="dcterms.date" content="2026-02-03">
 
 <title>When Empathy Helps and Hurts</title>
 <style>
@@ -80,11 +80,11 @@ div.csl-indent {
       <!-- user-provided yaml closeread style options -->
       <style>
         :root {
-          --cr-section-background-color: white;
---cr-narrative-text-color-overlay: black;
---cr-narrative-background-color-overlay: lightgrey;
---cr-narrative-text-color-sidebar: black;
+          --cr-narrative-text-color-overlay: black;
 --cr-narrative-background-color-sidebar: white;
+--cr-narrative-background-color-overlay: lightgrey;
+--cr-section-background-color: white;
+--cr-narrative-text-color-sidebar: black;
         }
       </style>
     
@@ -109,7 +109,7 @@ div.csl-indent {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">January 24, 2026</p>
+      <p class="date">February 3, 2026</p>
     </div>
   </div>
   
@@ -157,17 +157,17 @@ div.csl-indent {
 <p>A significant nonlinear association was observed between empathy and self-harm thoughts.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-pan-to="-15%,-25%" data-focus-on="cr-empathy" data-scale-by="1.5">
+<div class="trigger new-trigger" data-focus-on="cr-empathy" data-scale-by="1.5" data-pan-to="-15%,-25%">
 <div class="narrative">
 <p>Predicted probabilities of self-harm thoughts were lowest at moderate levels of empathy for both groups.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-pan-to="-45%,-5%" data-focus-on="cr-empathy" data-scale-by="1.5">
+<div class="trigger new-trigger" data-focus-on="cr-empathy" data-scale-by="1.5" data-pan-to="-45%,-5%">
 <div class="narrative">
 <p>Risk for self-harm thoughts was highest among individuals with high empathy.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-pan-to="15%,-5%" data-focus-on="cr-empathy" data-scale-by="2.0">
+<div class="trigger new-trigger" data-focus-on="cr-empathy" data-scale-by="2.0" data-pan-to="15%,-5%">
 <div class="narrative">
 <p>Risk for self-harm thoughts was also somewhat high for individuals with low empathy.</p>
 </div>
@@ -313,7 +313,7 @@ div.csl-indent {
 
 <div id="quarto-appendix" class="default"><section class="quarto-appendix-contents" role="doc-bibliography" id="quarto-bibliography"><h2 class="anchored quarto-appendix-heading">References</h2><div id="refs" class="references csl-bib-body hanging-indent" data-entry-spacing="0" data-line-spacing="2" role="list">
 <div id="ref-empathy" class="csl-entry" role="listitem">
-Hong, S., Grogan-Kaylor, A., Kim, M., Bender, A., Saba, S., Yu, C.-L., Fedina, L., &amp; Herrenkohl, T. (2026). When empathy helps and hurts: Non-linear associations between early childhood maltreatment history, empathy and self-harm thoughts. <em>Child Maltreatment</em>.
+Hong, S., Grogan-Kaylor, A., Kim, M., Bender, A. E., Saba, S., Yu, C.-L., Fedina, L., &amp; Herrenkohl, T. I. (2026). When empathy helps and hurts: Non-linear associations between early childhood maltreatment history, empathy and self-harm thoughts. <em>Child Maltreatment</em>. <a href="https://doi.org/10.1177/10775595261422448">https://doi.org/10.1177/10775595261422448</a>
 </div>
 </div></section></div></main>
 <!-- /main column -->
