added language about possible reverse causality

--- a/empathy/empathy.html
+++ b/empathy/empathy.html
@@ -81,10 +81,10 @@ div.csl-indent {
       <style>
         :root {
           --cr-narrative-text-color-overlay: black;
---cr-narrative-background-color-sidebar: white;
 --cr-narrative-background-color-overlay: lightgrey;
---cr-section-background-color: white;
 --cr-narrative-text-color-sidebar: black;
+--cr-section-background-color: white;
+--cr-narrative-background-color-sidebar: white;
         }
       </style>
     
@@ -157,17 +157,17 @@ div.csl-indent {
 <p>A significant nonlinear association was observed between empathy and self-harm thoughts.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-empathy" data-scale-by="1.5" data-pan-to="-15%,-25%">
+<div class="trigger new-trigger" data-scale-by="1.5" data-focus-on="cr-empathy" data-pan-to="-15%,-25%">
 <div class="narrative">
 <p>Predicted probabilities of self-harm thoughts were lowest at moderate levels of empathy for both groups.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-empathy" data-scale-by="1.5" data-pan-to="-45%,-5%">
+<div class="trigger new-trigger" data-scale-by="1.5" data-focus-on="cr-empathy" data-pan-to="-45%,-5%">
 <div class="narrative">
 <p>Risk for self-harm thoughts was highest among individuals with high empathy.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-empathy" data-scale-by="2.0" data-pan-to="15%,-5%">
+<div class="trigger new-trigger" data-scale-by="2.0" data-focus-on="cr-empathy" data-pan-to="15%,-5%">
 <div class="narrative">
 <p>Risk for self-harm thoughts was also somewhat high for individuals with low empathy.</p>
 </div>
@@ -177,6 +177,12 @@ div.csl-indent {
 <h1>Conclusion</h1>
 <p>While a moderate level of empathy can be protective from early childhood maltreatment, both low and high levels of empathy were associated with a greater risk for self-harm thoughts.</p>
 <p>Findings suggest the need to further investigate the role of empathy as a “risky strength” among adults.</p>
+</section>
+</div>
+<div class="trigger new-trigger" data-scale-by=".5" data-focus-on="cr-overall">
+<section id="future-research" class="level1 narrative">
+<h1>Future Research</h1>
+<p>While the temporal ordering of the variables in this study supports the idea of empathy as a “risky strength”, reverse causality is also a possibility. It may be that different levels of empathy are an outcome of different levels of self-harm thoughts. Future research would do well to explore these questions with larger samples, especially those that have repeated measures of the constructs of interest, and advanced quantitative methods capable of offering more causally robust conclusions.</p>
 </section>
 </div>
 </div>
